[gd_scene load_steps=27 format=3 uid="uid://b8wk3pt07sp1m"]

[ext_resource type="Script" path="res://sebo.gd" id="1_mq8n6"]
[ext_resource type="Texture2D" uid="uid://dqmbp68266r08" path="res://img/cenario/sebo/estante-sebo2.png" id="2_unok4"]
[ext_resource type="Texture2D" uid="uid://b3uj1oy6r6xwf" path="res://img/cenario/sebo/estante3-sebo3.png" id="3_dwsj0"]
[ext_resource type="Texture2D" uid="uid://leudbm0qttwb" path="res://img/cenario/sebo/porta-sebo2.png" id="5_1wea5"]
[ext_resource type="Texture2D" uid="uid://c72xje3npegbk" path="res://img/cenario/sebo/porta-sebo3.png" id="5_70ggl"]
[ext_resource type="Texture2D" uid="uid://dcswf8kjsrbnx" path="res://img/cenario/sebo/estante4-sebo3.png" id="6_w6u6d"]
[ext_resource type="Texture2D" uid="uid://cnfjcs38dxbkp" path="res://img/cenario/sebo/retorno2-sebo2.png" id="7_701o8"]
[ext_resource type="Texture2D" uid="uid://bd0jwuqexw7vw" path="res://img/cenario/sebo/ismael-sebo1.png" id="8_brlfp"]
[ext_resource type="PackedScene" uid="uid://b56pfrbvd7r3d" path="res://dialogue.tscn" id="8_vfo1t"]
[ext_resource type="Texture2D" uid="uid://dhn2ysl12m863" path="res://img/cenario/sebo/vitrola-sebo3.png" id="9_6blqc"]
[ext_resource type="PackedScene" uid="uid://46blvwif58os" path="res://inventory.tscn" id="9_hjf6q"]
[ext_resource type="Texture2D" uid="uid://cvsscrkk2s2y1" path="res://img/cenario/sebo/vinyl.png" id="9_obf22"]
[ext_resource type="Texture2D" uid="uid://drylxilsb0qba" path="res://img/cenario/sebo/estante-sebo3.png" id="10_dc2ro"]
[ext_resource type="Texture2D" uid="uid://smcugduypyn0" path="res://img/cenario/sebo/chao-sebo1.png" id="11_mhncv"]
[ext_resource type="Texture2D" uid="uid://eshe6q73h8dg" path="res://img/cenario/sebo/obstaculo-sebo1.png" id="12_upd1o"]
[ext_resource type="Texture2D" uid="uid://x0t1rcibmyqn" path="res://img/cenario/sebo/porta-sebo1.png" id="13_by46i"]
[ext_resource type="AudioStream" uid="uid://comh7fk73sya5" path="res://sounds/micuim 8bit.mp3" id="13_pf0ty"]
[ext_resource type="Texture2D" uid="uid://cr67ie1xcct5o" path="res://img/cenario/sebo/estante2-sebo3.png" id="15_yue0m"]
[ext_resource type="Texture2D" uid="uid://nrxqclrilwgl" path="res://img/cenario/sebo/saida.png" id="18_p4o6h"]
[ext_resource type="Texture2D" uid="uid://defimrtnchcvy" path="res://img/cenario/sebo/porta-sebo4.png" id="21_m3uc3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d1nps"]
size = Vector2(463, 376)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wkd7g"]
radius = 41.0
height = 306.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yvdkb"]
size = Vector2(867, 479)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_itlfo"]
size = Vector2(372, 153)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rocow"]
size = Vector2(127, 524)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qob3j"]
radius = 79.58
height = 395.79

[node name="Sebo" type="CanvasLayer"]
script = ExtResource("1_mq8n6")

[node name="Porta1" type="TextureButton" parent="."]
offset_left = 22.0
offset_top = 83.0
offset_right = 473.0
offset_bottom = 485.0
texture_normal = ExtResource("13_by46i")

[node name="StaticBody2D" type="StaticBody2D" parent="Porta1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Porta1"]
position = Vector2(231, 201)
shape = SubResource("RectangleShape2D_d1nps")

[node name="Ismael" type="TextureButton" parent="."]
z_index = 500
offset_left = 14.0
offset_top = 297.0
offset_right = 199.0
offset_bottom = 646.0
texture_normal = ExtResource("8_brlfp")

[node name="StaticBody2D" type="StaticBody2D" parent="Ismael"]
position = Vector2(-2, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ismael/StaticBody2D"]
position = Vector2(94, 162)
shape = SubResource("CapsuleShape2D_wkd7g")

[node name="Obstaculo" type="StaticBody2D" parent="."]
process_priority = -1
z_index = -2
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo"]
position = Vector2(864.5, 239.5)
shape = SubResource("RectangleShape2D_yvdkb")
one_way_collision_margin = 0.0

[node name="Estante2" type="StaticBody2D" parent="."]
z_index = -2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Estante2"]
z_index = -5
position = Vector2(590, 399.5)
shape = SubResource("RectangleShape2D_itlfo")

[node name="TextureRect" type="TextureRect" parent="Estante2/CollisionShape2D"]
offset_left = -222.0
offset_top = -8.5
offset_right = 216.0
offset_bottom = 180.5
texture = ExtResource("10_dc2ro")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Estante2"]
z_index = -6
polygon = PackedVector2Array(-9, -1, 839, 3, 848, 114, 678, 115, 675, 393, 673, 445, 6, 409)

[node name="TextureRect" type="TextureRect" parent="Estante2/CollisionPolygon2D"]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_w6u6d")

[node name="Porta2" type="TextureButton" parent="."]
z_index = -4
offset_left = 1113.0
offset_top = 135.0
offset_right = 1277.0
offset_bottom = 734.0
texture_normal = ExtResource("5_1wea5")

[node name="StaticBody2D" type="StaticBody2D" parent="Porta2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Porta2/StaticBody2D"]
position = Vector2(105, 328)
shape = SubResource("RectangleShape2D_rocow")

[node name="Retorno2" type="TextureButton" parent="."]
z_index = -4
offset_top = 113.0
offset_right = 178.0
offset_bottom = 622.0
scale = Vector2(0.9, 0.9)
texture_normal = ExtResource("7_701o8")

[node name="Vinyl" type="TextureButton" parent="."]
z_index = 55
offset_left = 690.0
offset_top = 631.0
offset_right = 722.0
offset_bottom = 663.0
scale = Vector2(2, 2)
action_mode = 0
texture_normal = ExtResource("9_obf22")

[node name="Vitrola" type="TextureButton" parent="."]
z_index = 100
offset_left = 15.0
offset_top = 525.0
offset_right = 262.0
offset_bottom = 723.0
texture_normal = ExtResource("9_6blqc")

[node name="StaticBody2D" type="StaticBody2D" parent="Vitrola"]
position = Vector2(107, 83)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Vitrola/StaticBody2D"]
polygon = PackedVector2Array(-70, 19, -107, -7, -109, 102, 140, 110, 140, 75, 123, 65, 118, 15, 72, -8, 46, -85, -81, -69)

[node name="Estante3" type="StaticBody2D" parent="."]
z_index = -2
position = Vector2(400, 250)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Estante3"]
position = Vector2(192, 175)
rotation = 0.523599
scale = Vector2(0.8, 0.8)
shape = SubResource("CapsuleShape2D_qob3j")
disabled = true
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="TextureRect" type="TextureRect" parent="Estante3/CollisionShape2D"]
offset_left = -258.0
offset_top = -102.0
offset_right = 101.0
offset_bottom = 331.0
rotation = -0.546288
texture = ExtResource("2_unok4")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Estante3"]
polygon = PackedVector2Array(871, 461, 876, -252, 609, -252, 528, -195, 528, 162, 600, 250, 635, 245, 628, 340, 709, 468)

[node name="TextureRect" type="TextureRect" parent="Estante3/CollisionPolygon2D"]
offset_left = 533.0
offset_top = -250.0
offset_right = 873.0
offset_bottom = 470.0
texture = ExtResource("3_dwsj0")
flip_h = true

[node name="AudioDica" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_pf0ty")

[node name="Porta3" type="TextureButton" parent="."]
z_index = -1000
offset_left = 380.0
offset_top = 11.0
offset_right = 944.0
offset_bottom = 464.0
texture_normal = ExtResource("5_70ggl")

[node name="Dialogue" parent="." instance=ExtResource("8_vfo1t")]

[node name="Inventory" parent="." instance=ExtResource("9_hjf6q")]

[node name="Saida" type="TextureButton" parent="."]
offset_left = 875.0
offset_top = 489.0
offset_right = 1275.0
offset_bottom = 681.0
texture_normal = ExtResource("18_p4o6h")

[node name="Retorno3" type="TextureButton" parent="."]
z_index = -1011
offset_top = -2.0
offset_right = 40.0
offset_bottom = 38.0
texture_normal = ExtResource("15_yue0m")

[node name="Retorno4" type="TextureButton" parent="."]
offset_top = 105.0
offset_right = 381.0
offset_bottom = 515.0
texture_normal = ExtResource("21_m3uc3")

[node name="Background" type="TextureRect" parent="."]
z_index = -10
offset_left = 7.0
offset_right = 1287.0
offset_bottom = 721.0
mouse_filter = 2
texture = ExtResource("12_upd1o")

[node name="Chao" type="TextureRect" parent="."]
z_index = -500
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
texture = ExtResource("11_mhncv")

[connection signal="pressed" from="Porta1" to="." method="_on_porta_1_pressed"]
[connection signal="pressed" from="Ismael" to="." method="_on_ismael_pressed"]
[connection signal="pressed" from="Porta2" to="." method="_on_porta_2_pressed"]
[connection signal="pressed" from="Retorno2" to="." method="_on_retorno_2_pressed"]
[connection signal="pressed" from="Vinyl" to="." method="_on_vinyl_pressed"]
[connection signal="pressed" from="Vitrola" to="." method="_on_vitrola_pressed"]
[connection signal="finished" from="AudioDica" to="." method="_on_audio_dica_finished"]
[connection signal="pressed" from="Porta3" to="." method="_on_porta_3_pressed"]
[connection signal="pressed_no" from="Dialogue" to="." method="_on_dialogue_pressed_no"]
[connection signal="pressed_yes" from="Dialogue" to="." method="_on_dialogue_pressed_yes"]
[connection signal="pressed" from="Saida" to="." method="_on_saida_pressed"]
[connection signal="pressed" from="Retorno3" to="." method="_on_retorno_3_pressed"]
[connection signal="pressed" from="Retorno4" to="." method="_on_retorno_4_pressed"]
